reducing height to avoid squishing

--- a/attack-theme/static/style/_layouts.scss
+++ b/attack-theme/static/style/_layouts.scss
@@ -1137,8 +1137,8 @@ pre {
     * {
         overflow: visible !important;
         break-before: always !important;
-        page-break-inside: avoid !important;
+//        page-break-inside: avoid !important;
         position: static !important;
-        height: 100% !important;
+        height: 90% !important;
     }
 }
